# kOS

./: CMakeLists.txt  Makefile
src/arch/x86_64/asm/: CMakeLists.txt  boot.asm  long_mode_init.asm
src/arch/x86_64/kernel/: CMakeLists.txt  core.cc
src/arch/x86_64/kernel/drivers/: vga.cc  vga.hh
src/arch/x86_64/linker/: linker.ld
